tests/build/cases/ui_node/delegate_iter_items_not_ui_node.stderr
error[E0277]: the trait bound `NotUiNode: UiNode` is not satisfied
    --> cases/ui_node/delegate_iter_items_not_ui_node.rs:9:27
     |
9    | #[ui_node(delegate_iter = self.inner.iter(), delegate_iter_mut = self.inner.iter_mut())]
     | --------------------------^^^^^^^^^^^^^^^^^---------------------------------------------
     | |                         |
     | |                         the trait `UiNode` is not implemented for `NotUiNode`
     | required by a bound introduced by this call
     |
     = help: the following other types implement trait `UiNode`:
            <implementers-list>
note: required by a bound in `delegate_iter`
    --> $WORKSPACE/zero-ui-core/src/ui_node.rs
     |
     |     pub fn delegate_iter<'a>(d: impl IntoIterator<Item = &'a impl UiNode>) -> impl IterImpl {
     |                                                                   ^^^^^^ required by this bound in `delegate_iter`

error[E0277]: the trait bound `NotUiNode: UiNode` is not satisfied
    --> cases/ui_node/delegate_iter_items_not_ui_node.rs:9:66
     |
9    | #[ui_node(delegate_iter = self.inner.iter(), delegate_iter_mut = self.inner.iter_mut())]
     | -----------------------------------------------------------------^^^^^^^^^^^^^^^^^^^^^--
     | |                                                                |
     | |                                                                the trait `UiNode` is not implemented for `NotUiNode`
     | required by a bound introduced by this call
     |
     = help: the following other types implement trait `UiNode`:
            <implementers-list>
note: required by a bound in `delegate_iter_mut`
    --> $WORKSPACE/zero-ui-core/src/ui_node.rs
     |
     |     pub fn delegate_iter_mut<'a>(d: impl IntoIterator<Item = &'a mut impl UiNode>) -> impl IterMutImpl {
     |                                                                           ^^^^^^ required by this bound in `delegate_iter_mut`
